--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ html {
 
 body {
     position: relative;
+    background-color: #151515;
 }
 
 /* Header */
@@ -20,12 +21,12 @@ header {
 }
 
 nav {
-    background-color: rgb(255, 255, 255);
+    /* background-color: rgb(255, 255, 255); */
+    background-color: #363636;
     width: 20rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: rgb(38 57 77) 0px 3px 35px -9px;
 }
 
 header ul {
@@ -36,7 +37,6 @@ header ul {
 header ul li {
     height: 50px;
     width: 50px;
-    background-color: #80808014;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,13 +47,13 @@ header ul li {
 }
 
 header ul li:hover {
-    background-color: rgb(230, 230, 230);
-    border-bottom: 3px solid black;
+    background-color: #dddddd2c;
 }
 
 header img {
     object-fit: contain;
     height: 2.5rem;
+    filter: invert(100%) sepia(0%) saturate(7257%) hue-rotate(284deg) brightness(106%) contrast(101%);
 }
 
 header .delete {
@@ -61,17 +61,18 @@ header .delete {
 }
 
 .search {
-    background-color: #80808014;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border: 1px solid #bfbfbf;
+    border: 1px solid rgb(236, 236, 236);
     height: 2rem;
     border-radius: 30px;
     margin-right: 15px;
 }
 
 .search input {
+    background-color: #363636;
+    color: white;
     height: 2rem;
     width: 8rem;
     border-radius: 30px 0 0 30px;
@@ -80,6 +81,10 @@ header .delete {
     font-size: 14px;
     font-family: sans-serif;
     outline: none;
+}
+
+.search input::placeholder{
+    color: rgb(199, 199, 199);
 }
 
 .search img {
@@ -95,7 +100,7 @@ header .delete {
 /* Aside */
 
 aside {
-    background-color: #f1f1f1;
+    background-color: #202020;
     width: 28%;
     height: 100vh;
     position: absolute;
@@ -112,6 +117,7 @@ aside {
 
 .asideHead img {
     object-fit: contain;
+    filter: invert(100%) sepia(0%) saturate(7257%) hue-rotate(284deg) brightness(106%) contrast(101%);
     height: 2.2rem;
     margin: 5px;
     cursor: pointer;
@@ -129,9 +135,15 @@ aside input,
 textarea {
     width: 20rem;
     font-family: sans-serif;
+    background-color: #232323;
+    color: white;
     border: 1px solid grey;
     outline: none;
     padding: 5px;
+}
+
+aside input::placeholder, textarea::placeholder{
+    color: rgb(199, 199, 199);
 }
 
 aside input {
@@ -149,15 +161,27 @@ aside button {
     font-size: 16px;
     padding: 8px 10px;
     border: none;
-    background: #303030;
-    color: #f3f4f8;
     cursor: pointer;
     border-radius: 3px;
     transition: all .3s;
 }
 
-aside button:hover {
-    background-color: #212121;
+aside button[type="submit"]{
+    background-color: rgba(255, 255, 255, 0.801);
+    color: black;
+}
+
+aside button[type="submit"]:hover{
+    background-color: white;
+}
+
+aside button[type="reset"]{
+    background: #323232;
+    color: white;
+}
+
+aside button[type="reset"]:hover{
+    background-color: #404040;
 }
 
 aside button:not(:nth-child(2)) {
@@ -179,6 +203,7 @@ section {
     flex-flow: row wrap;
     justify-content: center;
     align-items: start;
+    gap: 15px;
 }
 
 article {
@@ -186,10 +211,10 @@ article {
     min-width: 12rem;
     min-height: 12rem;
     padding: 15px;
+    background: #252525;
+    color: #ffffffd1;
+    border-radius: 10px;
     font-family: sans-serif;
-    margin: 10px;
-    box-shadow: 0 7px 15px 0px #d7d3d3;
-    border: 1px solid #f3f3f3;
 
 }
 
@@ -201,6 +226,7 @@ article {
 .tools img {
     object-fit: contain;
     height: 1rem;
+    filter: invert(100%) sepia(0%) saturate(7257%) hue-rotate(284deg) brightness(106%) contrast(101%);
     cursor: pointer;
     opacity: 0.5;
     visibility: hidden;
@@ -236,37 +262,9 @@ article p {
 
 
 
-
-
-/* -------------
-        Footer
-    ------------ */
-/* footer {
-     background-color: rgb(212, 212, 212);
-    background-color: rgb(238, 238, 238);
-    padding: 0 15%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-family: sans-serif;
-    font-size: 12px;
-}
-
-footer abbr{
-    width: 40px;
-    background-color: #303030;
-    text-align: center;
-}
-
-footer a img {
-    object-fit: contain;
-    height: 2.5rem;
-    filter: brightness(0) invert(1);
-} */
-
-
-
-/* Responsiveness */
+/*------------------
+    Responsiveness
+ ------------------*/
 
 /* Mobile */
 
